Fix another overflow

--- a/src/components/programs/ProgramsPT.module.css
+++ b/src/components/programs/ProgramsPT.module.css
@@ -23,7 +23,6 @@
 
 .intro__content--image {
     width: 100%;
-    margin-top: 5rem;
 }
 
 .intro__content--image img {
